lex-parser/tests/compile_fail/definition_rejects_session.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/definition_rejects_session.rs:7:53
  |
7 |     let _definition = Definition::new(subject, vec![SessionContent::Session(session)]);
  |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `ContentElement`, found `SessionContent`
